[Fix #4] Change to the Generic Multiple Layout Adapter implementation to support background calculation while preserving adapter state consistency. [Support] Minor code refactoring.

--- a/gmlrva-lib/src/main/res/values/strings.xml
+++ b/gmlrva-lib/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-
+    <string name="gmlrva_unsupported_remove_position" translatable="false">
+        Unsupported operation because the position value is likely to be wrong if there is a pending update.
+    </string>
 </resources>
